z-index fixes

--- a/src/easy-tooltips.css
+++ b/src/easy-tooltips.css
@@ -7,7 +7,7 @@
   --easy-tooltip-border-size: 1px;
   --easy-tooltip-border-radius: 4px;
   --easy-tooltip-padding: 8px 12px;
-  --easy-tooltip-animation-length: 1s;
+  --easy-tooltip-animation-length: .15s;
   --easy-tooltip-animation-distance: 4px;
   --easy-tooltip-delay: 0s;
   --easy-tooltip-inactive-delay: .15s;
